# uc-intg-monoprice-htp1

./: .gitignore  Dockerfile  README.md  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
intg_monoprice_htp1/: __init__.py  browser.py  device.py  displayvalues.py  driver.py  media_player.py  remote.py  selector.py  sensor.py
